WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180859
Rotating when zoomed in with fingers down can result in a broken tab
https://bugs.webkit.org/show_bug.cgi?id=180859
Summary
Rotating when zoomed in with fingers down can result in a broken tab
Simon Fraser (smfr)
Reported
2017-12-14 20:24:53 PST
Rotating when zoomed in with fingers down can result in a broken tab
Attachments
Patch
(2.12 KB, patch)
2017-12-14 20:27 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews112 for mac-elcapitan
(3.03 MB, application/zip)
2017-12-15 02:00 PST
,
EWS Watchlist
no flags
Details
Patch
(2.20 KB, patch)
2017-12-15 13:05 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-12-14 20:27:42 PST
Created
attachment 329452
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-12-14 20:28:07 PST
rdar://problem/34532817
EWS Watchlist
Comment 3
2017-12-15 02:00:27 PST
Comment on
attachment 329452
[details]
Patch
Attachment 329452
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/5671180
New failing tests: svg/custom/object-sizing-explicit-width.xhtml
EWS Watchlist
Comment 4
2017-12-15 02:00:28 PST
Created
attachment 329480
[details]
Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Simon Fraser (smfr)
Comment 5
2017-12-15 13:05:29 PST
Created
attachment 329510
[details]
Patch
Tim Horton
Comment 6
2017-12-15 13:07:00 PST
Comment on
attachment 329510
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329510&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:2381 > + // When rotating with two fingers down, UIScrollVIew can set a bogus content view position:
rdar://problem/36065495
.
VIew
Tim Horton
Comment 7
2017-12-15 13:07:25 PST
Comment on
attachment 329510
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329510&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:2382 > + // "Center" is top left because we set the anchorPoint to 0,0.
This possibly should be a FIXME-to-remove-when-fixed?
Simon Fraser (smfr)
Comment 8
2017-12-15 13:16:11 PST
https://trac.webkit.org/r225981
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug